--- a/src/app/blocks/contacts-block/components/contact-form/contact-form.component.html
+++ b/src/app/blocks/contacts-block/components/contact-form/contact-form.component.html
@@ -32,8 +32,9 @@
                     required></textarea>
             </label>
         </div>
+
         <div class="d-flex flex-row-reverse mr-1">
-            <button [disabled]="contactForm.invalid" class="neu primary" type="submit">Send</button>
+            <button [disabled]="contactForm.invalid" class="neu primary" type="submit" (click)="executeRecaptchaV3()">Send</button>
         </div>
     </div>
 </form>
