--- a/src/styles/skeleton-loader.scss
+++ b/src/styles/skeleton-loader.scss
@@ -1,4 +1,4 @@
-@import '~bootstrap/scss/bootstrap';
+@import 'bootstrap/scss/bootstrap';
 
 $skeleton-loader-mask-color: $white !default;
 $skeleton-loader-mask-color-dark: $dark !default;
