--- a/src/app/blocks/navigation-block/navigation-block.component.html
+++ b/src/app/blocks/navigation-block/navigation-block.component.html
@@ -1,8 +1,6 @@
 <div class="glass h-100 profile-container">
     <div class="glass top-container text-center">
-        <div class="image-container glass rounded-circle mb-3">
-            <i class="fas fa-user m-auto fa-3x"></i>
-        </div>
+        <app-profile-picture></app-profile-picture>
         
         <span *ngIf="loading">
             <div class="loader name-loader skeleton-loader skeleton-loader-fill-sm"></div>
