--- a/src/app/blocks/mobile-block/mobile-block.component.html
+++ b/src/app/blocks/mobile-block/mobile-block.component.html
@@ -2,7 +2,39 @@
     <div class="profile-picture">
         <app-profile-picture [pictureSize]="profilePictureSize"></app-profile-picture>
     </div>
+
+    
     <app-home-block></app-home-block>
-    <app-about-block></app-about-block>
-    <app-skills-block></app-skills-block>
+
+    <div class="w-100 social-links-wrapper">
+        <app-social-links-bar [data]="(socialLinks$ | async)"></app-social-links-bar>
+    </div>
+
+    <app-h-line></app-h-line>
+
+    <div class="block-container">
+        <h1>About me</h1>
+        <app-about-block></app-about-block>
+    </div>
+
+    <app-h-line></app-h-line>
+
+    <div class="block-container">
+        <h1>Skills</h1>
+        <app-skills-block></app-skills-block>
+    </div>
+
+    <app-h-line></app-h-line>
+
+    <div class="block-container">
+        <h1>Experience</h1>
+        <app-experience-block></app-experience-block>
+    </div>
+
+    <app-h-line></app-h-line>
+
+    <div class="block-container">
+        <h1>Contacts</h1>
+        <app-contacts-block></app-contacts-block>
+    </div>
 </div>
