--- a/src/app/main/main-page/main-page.component.html
+++ b/src/app/main/main-page/main-page.component.html
@@ -1,4 +1,4 @@
-<div *isComputer class="w-100 h-100">
+<div *ngIf="!isMobile" class="w-100 h-100">
     <app-curves-animation></app-curves-animation>
     <div  class="main-container d-flex justify-content-between align-items-stretch">
         <app-navigation-block></app-navigation-block>
@@ -8,6 +8,6 @@
     </div>
 </div>
 
-<div *isMobile class="glass w-100 h-100 mobile-container">
+<div *ngIf="isMobile" class="glass w-100 h-100 mobile-container">
     <app-mobile-block></app-mobile-block>
 </div>
