--- a/src/app/blocks/experience-block/components/workplace-collapsible-content/workplace-collapsible-content.component.scss
+++ b/src/app/blocks/experience-block/components/workplace-collapsible-content/workplace-collapsible-content.component.scss
@@ -10,6 +10,10 @@
     margin-bottom: 1rem;
 }
 
+.position-title-container-mobile {
+    margin-bottom: 1rem;
+}
+
 .position-title {
     font-size: 1.3rem;
     font-weight: 500;
@@ -18,4 +22,13 @@
 .position-date {
     color: grey;
     margin-right: .5rem;
+}
+
+.project-container-mobile {
+    text-align: start;
+}
+
+.project-content-mobile {
+    margin-left: .5rem;
+    margin-bottom: .5rem;
 }
