--- a/src/app/blocks/contacts-block/contacts-block.component.scss
+++ b/src/app/blocks/contacts-block/contacts-block.component.scss
@@ -1,5 +1,9 @@
-.text-block {
+.description-block {
     margin: 6rem 3rem 3rem 3rem;
+}
+
+.description-block-mobile {
+    margin: 2rem;
 }
 
 .contact-form {
