--- a/src/app/blocks/contacts-block/contacts-block.component.scss
+++ b/src/app/blocks/contacts-block/contacts-block.component.scss
@@ -1,9 +1,8 @@
 .description-block {
     margin: 6rem 3rem 3rem 3rem;
-}
-
-.description-block-mobile {
-    margin: 2rem;
+    &-mobile {
+        margin: 2rem;
+    }
 }
 
 .contact-form {
