--- a/src/app/blocks/home-block/home-block.component.scss
+++ b/src/app/blocks/home-block/home-block.component.scss
@@ -1,9 +1,8 @@
 .text-block {
     margin: 5rem 3rem 5rem 3rem;
-}
-
-.text-block-mobile {
-    margin: 1rem 2rem;
+    &-mobile {
+        margin: 1rem 2rem;
+    }
 }
 
 .title-line {
