--- a/src/app/blocks/experience-block/components/workplace-collapsible/workplace-collapsible.component.html
+++ b/src/app/blocks/experience-block/components/workplace-collapsible/workplace-collapsible.component.html
@@ -2,7 +2,7 @@
     <div class="collapsible w-100 unselectable"
         (click)="toggle()">
         <div class="d-flex justify-content-between align-items-center">
-            <div>
+            <div class="text-start">
                 <span *ngIf="visible"><i class="fas fa-angle-up"></i></span>
                 <span *ngIf="!visible"><i class="fas fa-angle-down"></i></span>
                 &nbsp;<span [ngClass]="deviceDetector.isMobile() ? 'company-name-mobile' : 'company-name'">{{workplace.companyName}}</span>
