Fix mobile resolution

--- a/src/app/blocks/mobile-block/mobile-block.component.html
+++ b/src/app/blocks/mobile-block/mobile-block.component.html
@@ -36,4 +36,5 @@
     <div class="block-container">
         <app-contacts-block></app-contacts-block>
     </div>
+    <div class="p-5"></div>
 </div>
