--- a/src/app/blocks/mobile-block/mobile-block.component.scss
+++ b/src/app/blocks/mobile-block/mobile-block.component.scss
@@ -2,6 +2,14 @@
     overflow-y: scroll;
 }
 
+.home-container {
+    height: 45rem;
+}
+
+.content-container {
+    z-index: 10;
+}
+
 .profile-picture {
     margin-top: 2rem;
 }
