--- a/src/app/animations/curves-animation/curves-animation.component.html
+++ b/src/app/animations/curves-animation/curves-animation.component.html
@@ -1,4 +1,4 @@
-<div class="curveWrap">
+<div class="curves-container">
   <svg width="100%" height="100%" viewBox="0 0 1200 100" xmlns="http://www.w3.org/2000/svg">
     <g class="curve" fill="none">
       <path d="M 0, 60 S 300, -60, 600, 60, 800, -120, 1200 60" />
