--- a/src/app/main/main-page/main-page.component.scss
+++ b/src/app/main/main-page/main-page.component.scss
@@ -11,3 +11,9 @@
 .mobile-container{
   overflow-y: scroll;
 }
+
+.ad-size {
+  display: inline-block !important;
+  width: 728px !important;
+  height: 90px !important;
+}
