--- a/src/app/main/main-page/main-page.component.html
+++ b/src/app/main/main-page/main-page.component.html
@@ -1,10 +1,20 @@
 <div *ngIf="!isMobile" class="w-100 h-100">
     <app-curves-animation></app-curves-animation>
-    <div  class="main-container d-flex justify-content-between align-items-stretch">
+    <div class="main-container d-flex justify-content-between align-items-stretch">
         <app-navigation-block></app-navigation-block>
         <div class="glass w-100 router-wrapper">
             <router-outlet></router-outlet>
         </div>
+    </div>
+    <div class="w-100 text-center">
+        <ng2-adsense
+            [adClient]="adClient"
+            [adSlot]="adSlot"
+            adFormat="inline"
+            [display]="'inline-block'"
+            [width]="1005"
+            [height]="124">
+        </ng2-adsense>
     </div>
 </div>
 
