--- a/src/app/blocks/about-block/about-block.component.html
+++ b/src/app/blocks/about-block/about-block.component.html
@@ -1,11 +1,14 @@
 <div>
     <div *ngIf="!isMobile" class="block-container">
-        <div class="col-6">
+
+        <app-loader *ngIf="loading"></app-loader>
+
+        <div class="col-6" *ngIf="!loading">
             <ng-container *ngFor="let data of dataList|takeEvery:2; let i = index;">
                 <app-about-text-container [data]="data" [animationDelay]="i*300"></app-about-text-container>
             </ng-container>
         </div>
-        <div class="col-6">
+        <div class="col-6" *ngIf="!loading">
             <ng-container *ngFor="let data of dataList|takeEvery:2:false; let i = index;">
                 <app-about-text-container [data]="data" [animationDelay]="i*300"></app-about-text-container>
             </ng-container>
@@ -13,7 +16,10 @@
     </div>
 
     <div *ngIf="isMobile" class="block-container">
-        <div class="col-12">
+
+        <app-loader *ngIf="loading"></app-loader>
+
+        <div class="col-12"  *ngIf="!loading">
             <ng-container *ngFor="let data of dataList">
                 <app-about-text-container [data]="data"></app-about-text-container>
             </ng-container>
