--- a/src/app/blocks/experience-block/experience-block.component.html
+++ b/src/app/blocks/experience-block/experience-block.component.html
@@ -1,5 +1,5 @@
 <div class="m-3">
-    <span *ngFor="let workplace of workplaces | workplaceSort; let i = index">
-        <app-workplace-collapsible [workplace]="workplace" [animationDelay]="i*300" [visible]="i===0"></app-workplace-collapsible>
+    <span *ngFor="let experience of experiences; let i = index">
+        <app-experience-collapsible [experience]="experience" [animationDelay]="i*300" [visible]="i===0"></app-experience-collapsible>
     </span>
 </div>
