#10 Add profile picture

--- a/src/app/blocks/mobile-block/mobile-block.component.html
+++ b/src/app/blocks/mobile-block/mobile-block.component.html
@@ -4,7 +4,7 @@
 
     <div class="glass content-container">
         <div class="profile-picture">
-            <app-profile-picture [pictureSize]="profilePictureSize"></app-profile-picture>
+            <app-profile-picture [imageUrl]="picture" [pictureSize]="profilePictureSize"></app-profile-picture>
         </div>
     
         <div class="home-container">
