--- a/src/app/blocks/navigation-block/components/social-links-bar/social-links-bar.component.html
+++ b/src/app/blocks/navigation-block/components/social-links-bar/social-links-bar.component.html
@@ -4,9 +4,9 @@
             <i class="fab fa-linkedin fa-2x bounce-in"></i>
         </div>
     </a>
-    <a [href]="data?.facebookUrl" target="_blank">
+    <a [href]="data?.instagramUrl" target="_blank">
         <div class="icon-wrapper glass p-2 pb-1 zoom-on-hover-2">
-            <i class="fab fa-facebook-square fa-2x bounce-in"></i>
+            <i class="fab fa-instagram-square fa-2x bounce-in"></i>
         </div>
     </a>
     <a [href]="data?.githubUrl" target="_blank">
