--- a/src/app/blocks/components/profile-picture/profile-picture.component.html
+++ b/src/app/blocks/components/profile-picture/profile-picture.component.html
@@ -1,3 +1,6 @@
 <div class="image-container glass rounded-circle mb-3" [style]="pictureSize">
-    <i class="fas fa-user m-auto fa-3x"></i>
+    <ng-container *ngIf="!imageUrl || imageUrl.length === 0">
+        <i class="fas fa-user m-auto fa-3x"></i>
+    </ng-container>
+    <img [style]="pictureSize" class="rounded-circle" *ngIf="imageUrl && imageUrl.length !== 0" [src]="imageUrl | safeurl" alt="Profile picture">
 </div>
