--- a/src/styles/animations.scss
+++ b/src/styles/animations.scss
@@ -1,5 +1,3 @@
-@use "sass:math";
-
 /* BOUNCE IN */
 .bounce-in {
     opacity: 0;
@@ -39,6 +37,6 @@
 
 @for $i from 1 to 5 {
     .zoom-on-hover-#{$i}:hover {
-        transform: scale(#{math.div($i, 10)+1});
+        transform: scale(calc($i / 10)+1);
     }
 }
