Hide CV and Instagram buttons

--- a/src/app/blocks/navigation-block/components/social-links-bar/social-links-bar.component.html
+++ b/src/app/blocks/navigation-block/components/social-links-bar/social-links-bar.component.html
@@ -4,11 +4,11 @@
             <i class="fab fa-linkedin fa-2x bounce-in"></i>
         </div>
     </a>
-    <a [href]="data?.instagramUrl" target="_blank" (click)="logClick('go_to_instagram')">
+    <!-- <a [href]="data?.instagramUrl" target="_blank" (click)="logClick('go_to_instagram')">
         <div class="icon-wrapper glass p-2 pb-1 zoom-on-hover-2">
             <i class="fab fa-instagram-square fa-2x bounce-in"></i>
         </div>
-    </a>
+    </a> -->
     <a [href]="data?.githubUrl" target="_blank" (click)="logClick('go_to_github')">
         <div class="icon-wrapper glass p-2 pb-1 zoom-on-hover-2">
             <i class="fab fa-github-square fa-2x bounce-in"></i>
