--- a/src/app/blocks/components/profile-picture/profile-picture.component.html
+++ b/src/app/blocks/components/profile-picture/profile-picture.component.html
@@ -2,5 +2,5 @@
     <ng-container *ngIf="!imageUrl || imageUrl.length === 0">
         <i class="fas fa-user m-auto fa-3x"></i>
     </ng-container>
-    <img [style]="pictureSize" class="rounded-circle" *ngIf="imageUrl && imageUrl.length !== 0" [src]="imageUrl | safeurl" alt="Profile picture">
+    <img [style]="pictureSize" class="rounded-circle" *ngIf="imageUrl && imageUrl.length !== 0" [src]="imageUrl | secure" alt="Profile picture">
 </div>
