--- a/src/app/blocks/home-block/home-block.component.html
+++ b/src/app/blocks/home-block/home-block.component.html
@@ -22,7 +22,7 @@
     <div *ngIf="!deviceDetector.isMobile()" class="mt-auto d-flex justify-content-around navigation-buttons">
         <button class="glass" [routerLink]="['/about']">About me</button>
         <button class="glass" [routerLink]="['/skills']">My skills</button>
-        <button class="glass" (click)="downloadCV()">Download CV</button>
+        <!--<button class="glass" (click)="downloadCV()">Download CV</button>-->
     </div>
 
 </div>
