--- a/src/app/blocks/about-block/components/about-text-container/about-text-container.component.scss
+++ b/src/app/blocks/about-block/components/about-text-container/about-text-container.component.scss
@@ -3,13 +3,14 @@
 }
 
 .expandable {
-    max-height: calc(20*1rem);
+    max-height: calc(15*1rem);
     overflow: hidden;
-    transition:         height 500ms ease;
-    -moz-transition:    height 500ms ease;
-    -ms-transition:     height 500ms ease;
-    -o-transition:      height 500ms ease;
+    transition: height 500ms ease;
+    -moz-transition: height 500ms ease;
+    -ms-transition: height 500ms ease;
+    -o-transition: height 500ms ease;
     -webkit-transition: height 500ms ease;
+    text-align: left;
 }
 
 .expandable-toggle {
